[package]
name = "mitm"
version = "0.1.0"
authors = ["Thomas WACHE <thomas@wache.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "polybar-mitm"
path = "src/bins/polybar.rs"

[[bin]]
name = "waybar-mitm"
path = "src/bins/waybar.rs"
